--- a/style.css
+++ b/style.css
@@ -1,15 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,500;1,300;1,500&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  margin: auto;
+  max-width: 1100px;
+  overflow: auto;
+  padding: 0 20px;
+}
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: grey;
-  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: #f5f6f6;
+
   box-sizing: border-box;
 }
 .navbar {
   margin: 2rem;
-  padding: 0.6rem;
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+#logo {
+  /* font-family: "Merriweather", serif; */
+
+  background-color: #f7df1e;
+  border-radius: 5px;
+  /* width: 50px;--> for logo C */
+  width: 15rem;
+  height: 35px;
 }
 
-.main,
+.info > h2 {
+  margin-bottom: 0.1rem;
+  padding-bottom: 0.2rem;
+  font-size: 50px;
+  text-align: center;
+}
+.info > p {
+  color: #979797;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* .inputPage form {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+} */
+.inputPage {
+  color: #fff;
+  margin: auto;
+  border-radius: 5px;
+  background-color: #bdbdbd;
+  width: 30rem;
+  height: 3rem;
+  text-align: center;
+  position: relative;
+  margin-top: 3rem;
+}
+.inputPage select {
+  border-color: #979797;
+  width: 5rem;
+  align-items: center;
+  height: 2.5rem;
+  border-radius: 5px;
+  margin-top: 3.8px;
+  padding: 10px;
+}
+
+/* 
+.inputPage div {
+  margin: 20px;
+  width: 800px;
+  height: 30px;
+  background-color: #f5f6f6;
+  display: flex;
+  justify-content: space-between;
+} */
+.inputPage .inputPageValue {
+  display: inline;
+}
+
 input {
   margin-bottom: 1rem;
   padding: 0.3rem;
@@ -19,23 +96,14 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
 }
 
-a.button1 {
-  display: inline-block;
-
-  padding: 0.35em 1.2em;
-  border: 0.1em solid #141414;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 0.12em;
+a {
   text-decoration: none;
-  font-weight: 300;
-  text-align: center;
-  color: #fff;
-  transition: all ease-in 0.2s;
 }
-a.button1:hover {
-  color: #000;
+a.btn:hover {
+  color: #a5a4a4;
   background-color: #fff;
 }
 
@@ -46,13 +114,14 @@ a.button1:hover {
 }
 
 .btn {
-  border: 2px solid gray;
-  color: gray;
+  border: 2px solid #979797;
+  color: #141414;
   background-color: white;
   padding: 8px 20px;
   border-radius: 8px;
   font-size: 20px;
   font-weight: bold;
+
   margin-bottom: 1.5rem;
 }
 
@@ -62,4 +131,43 @@ a.button1:hover {
   left: 0;
   top: 0;
   opacity: 0;
+}
+i {
+  color: #141414;
+}
+
+.sendBtn {
+  width: 4rem;
+  height: 2rem;
+  padding: 0.5rem;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  background-color: #f7df1e;
+}
+.sendBtn:hover {
+  color: #333232;
+}
+
+.footer input {
+  border: 2px solid #979797;
+  border-radius: 5px;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 7rem;
+  margin-left: 2rem;
+}
+.social > a {
+  margin-right: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
